Bug 506282 - Dolphin does not report I/O failure when copying multiple files
Summary: Dolphin does not report I/O failure when copying multiple files
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.2
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-27 16:04 UTC by ulterno
Modified: 2025-07-02 09:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-1070738-0.html (469 bytes, text/html)
2025-07-01 07:30 UTC, ulterno
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ulterno 2025-06-27 16:04:24 UTC
SUMMARY
When copying multiple files, if an I/O failure occurs Dolphin will not report that and silently fail for that specific file, unlike when a single file is copied where Dolphin will inform the user.

STEPS TO REPRODUCE
1. Copy a directory with files at multiple levels in the directory tree.
2. Induce an I/O error ?? It was possible for me because my HDD is going bad.
3. Wait for all operations to finish and see the notifications

OBSERVED RESULT
No notification regarding failed file transfers

EXPECTED RESULT
Some kind of notification indicating failed file transfers

SOFTWARE/OS VERSIONS
Dolphin: 25.04.2
KDE Frameworks: 6.15.0
Qt: Using 6.9.1 and built against 6.9.1
EndeavourOS (Wayland)
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.15.3-arch1-1

ADDITIONAL INFORMATION
When getting an I/O failure on a single file copy, I got a message box from Dolphin saying "Could not read file " followed by the full file path. Something similar for a multiple transfer is desirable.

Setting to a higher priority because if a user does a Copy and a Delete Source operation, they might lose data.
Comment 1 ulterno 2025-06-27 16:08:03 UTC
File copy errors are most of the times, the first point of information, from where the user might lead to check and realise that their storage device is giving errors.
It is important that reporting such an error is not missed in the UI.
Comment 2 Bug Janitor Service 2025-06-29 09:23:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/995
Comment 3 John 2025-07-01 05:43:33 UTC
What?
this is awful!
Especially since Dolphin doesn't have a copy / move operation with checksum verification or a way to calculate the checksum for an entire folder.
I hope the merge request will be approved ASAP!
Comment 4 ulterno 2025-07-01 07:30:38 UTC
Created attachment 182824 [details]
attachment-1070738-0.html

Consider fixing for Plasma 5 too (Debian and all)?
Unless the bug does not exist over there.

...
> --- Comment #3 from John <ilikefoss@waterisgone.com> ---
>
>
Comment 5 Méven 2025-07-02 09:52:47 UTC
Git commit 6dd5525131e13d42f515eba982a6e7cd1153effe by Méven Car.
Committed on 02/07/2025 at 08:36.
Pushed by meven into branch 'master'.

DolphinView: display errorMessage when copy errors occurs

when copying multiple files.

CopyJob skip those by default (CopyJobPrivate::slotSubError), and emits warning.
Hook this to errorMessage.

We would need to improve this as only the last error Message will be
visible.

M  +6    -0    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/6dd5525131e13d42f515eba982a6e7cd1153effe
Comment 6 Méven 2025-07-02 09:52:48 UTC
Git commit c4ffe88c9fafaed4b66a010a25b117427ba709f6 by Méven Car.
Committed on 02/07/2025 at 09:44.
Pushed by meven into branch 'master'.

DolphinView: display errorMessage when copy errors occurs

when copying multiple files.

CopyJob skip those by default (CopyJobPrivate::slotSubError), and emits warning.
Hook this to errorMessage.

We would need to improve this as only the last error Message will be
visible.

M  +12   -2    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/c4ffe88c9fafaed4b66a010a25b117427ba709f6